<resources>
    <string name="app_name">DeltaApp</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">736714640021560</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb736714640021560</string>

    <!--City Names-->
    <string-array name="city_names">
        <item>St.Charles, IL</item>
        <item>New York City, NY</item>
        <item>Dallas, TX</item>
        <item>Atlanta, GA</item>
        <item>Washington, DC</item>
        <item>Philadelphia, PA</item>
        <item>Denver, CO</item>
    </string-array>

    <!--Book A Flight-->
    <string name="bf_tableft">ROUND-TRIP</string>
    <string name="bf_tabcenter">ONE-WAY</string>
    <string name="bf_tabright">MULTI-CITY</string>

    <string name="bf_from">From</string>
    <string name="bf_to">To</string>
    <string name="bf_dates">Dates</string>
    <string name="bf_passengers">PASSENGERS</string>
    <string name="bf_numofticket">1</string>
    <string name="bf_showpricein">SHOW PRICE IN</string>
    <string name="bf_money">Money</string>
    <string name="bf_miles">Miles</string>
    <string name="bf_findflights">Find Flights</string>
    <string name="bf_minus">-</string>
    <string name="bf_plus">+</string>
    <string name="bf_moreflights">+ MORE FLIGHTS</string>
    <string name="bf_set_connection_airport">SET CONNECTION AIRPORT ></string>

    <!--find my trip-->
    <string name="ft_Title">Find My Trip</string>
    <string name="ft_fname">First Name</string>
    <string name="ft_lname">Last Name</string>
    <string name="ft_findbutton">Find it</string>
    <string name="ft_confirmationNum">Enter Confirmation#</string>

    <!--bottom menu-->
    <string name="bm_mytrip">My Trip</string>
    <string name="bm_today">Flight</string>
    <string name="bm_book">Book</string>
    <string name="bm_feed">Map</string>
    <string name="bm_more">More</string>

    <!--show flights-->
    <string name="sf_show_price_in">SHOW PRICE IN</string>
    <string name="sf_price">PRICE</string>
    <string name="sf_discription">Fares listed are one-way passenger, including taxes and fees.
        Additional baggage fees may apply. "Best Match" may list Delta operated flights first.</string>
    <string name="sf_money">USD</string>
    <string name="sf_main_cabin">MAIN</string>
    <string name="sf_first_cabin">FIRST</string>

    <!--eco seat-->
    <string name="es_title">MAIN CABIN</string>
    <string name="es_clearButton">CLEAR SELECTION</string>

    <!--first class seat-->
    <string name="fcs_title">FIRST CLASS</string>


    <!--login-->
    <string name="login_title">Fly Delta</string>
    <string name="login_button">LOG IN</string>
    <string name="title_activity_maps">Map</string>

    <!--more-->
    <string name="more_profile">Profile</string>
    <string name="more_flight_status">Flight Status</string>
    <string name="more_trackbags">Track My Bags</string>
    <string name="more_skyclub">Delta Sky Club</string>
    <string name="more_logout">Log Out</string>
    <string name="more_airport_map">Airport Map</string>

    <!--<string name="title_activity_maps">Map</string>-->
    <string name="more_seat">Seat Select</string>

    <!--Display Flight Details $ confirmation page -->
    <string name="fd_price_title">Total Price (All Fights)</string>
    <string name="fd_pay">Purchase</string>
    <string name="fd_title">Flight Details</string>
    <string name="fc_title">Flight Confirmation</string>
    <string name="fc_select_seat">Select Seat</string>
    <string name="title_activity_maps2">Map</string>

    <string name="payment_btn">Pay</string>

    <string name="btn_send_email">Send Email</string>

</resources>
