<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/txt_bf_nums"
        android:layout_width="30dp"
        android:layout_height="39dp"
        android:layout_marginBottom="97dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="97dp"
        android:background="@drawable/rectangle_border"
        android:padding="10dp"
        android:text="2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bf_find"
        app:layout_constraintEnd_toEndOf="@+id/btn_bf_minus"
        app:layout_constraintStart_toStartOf="@+id/tv_bf_title1"
        app:layout_constraintTop_toBottomOf="@+id/rv_bookflights" />

    <Button
        android:id="@+id/btn_bf_minus"
        android:layout_width="33dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:text="@string/bf_plus"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_bf_nums"
        app:layout_constraintStart_toStartOf="@+id/tv_bf_title1" />

    <Button
        android:id="@+id/btn_bf_plus"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/bf_minus"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_bf_nums"
        app:layout_constraintEnd_toStartOf="@+id/txt_bf_nums"
        app:layout_constraintStart_toStartOf="@+id/tv_bf_title1" />

    <TextView
        android:id="@+id/tv_bf_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/bf_passengers"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_bf_plus"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_bf_title2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="54dp"
        android:layout_marginTop="55dp"
        android:text="@string/bf_showpricein"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bf_miles"
        app:layout_constraintStart_toStartOf="@+id/tv_bf_money"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_bf_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:background="@drawable/rectangle_border"
        android:padding="10dp"
        android:text="@string/bf_miles"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_bf_money"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_bf_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="131dp"
        android:background="@drawable/rectangle_border"
        android:padding="10dp"
        android:text="@string/bf_money"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_bf_miles" />

    <TextView
        android:id="@+id/tv_bf_find"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/bf_findflights"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bf_miles" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:layout_marginStart="16dp"
        android:text="@string/bf_moreflights"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_bookflights"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>