<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/txt_bf_from"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/rectangle_border"
        android:ems="10"
        android:hint="@string/bf_from"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_bf_dates"
        app:layout_constraintEnd_toStartOf="@+id/txt_bf_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_bf_to"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/rectangle_border"
        android:ems="10"
        android:hint="@string/bf_to"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_bf_dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_bf_from"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_bf_dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="502dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rectangle_border"
        android:ems="10"
        android:hint="@string/bf_dates"
        android:inputType="date"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bf_to" />

    <TextView
        android:id="@+id/tv_bf_connairport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:layout_marginStart="16dp"
        android:text="@string/bf_set_connection_airport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bf_dates" />

</android.support.constraint.ConstraintLayout>